# gbaforge

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: main.yml
assets/: offsets.json
docs/: DEVELOPMENT_GUIDE.md  MACOS_XCODE_SETUP.md  RELEASE_NOTES.md
integration_test/: simple_test.dart
lib/: main.dart
lib/src/features/editor/providers/: offset_provider.dart  rom_provider.dart
lib/src/features/editor/screens/: home_screen.dart  script_editor_screen.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  compression.rs  graphics.rs  lib.rs  scripting.rs  space_manager.rs  state.rs  structures.rs
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_gba_forge.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_gba_forge.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
