[package]
name = "gba_forge_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# FFI
flutter_rust_bridge = "=2.11.1"

# Binary Parsing
binrw = "0.13.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
once_cell = "1.19" # For global RomState handling
log = "0.4"

# Image Processing
image = "0.24"

# Compression (Placeholder for compatible LZ77 crate)
# using a generic one for now, would replace with specific GBA implementation
lz-fear = "0.1" 
